crates/tests/src/snapshots/fe_compiler_tests__compile_errors__unary_minus_on_bool.snap
---
source: tests/src/compile_errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: cannot apply unary operator `-` to type `bool`
  ┌─ [snippet]:4:4
  │
4 │   -x
  │    ^ this has type `bool`; expected a numeric type


